--- a/css/modal.css
+++ b/css/modal.css
@@ -9,8 +9,8 @@
     top: 0;
     height: 100vh;
     width: 100%;
-    overflow: auto;
-    background-color: rgba(0,0,0,0.6);
+
+    background-color: rgba(0, 0, 0, 0.6);
     z-index: 1;
 }
 
@@ -20,7 +20,7 @@
     margin: 20% auto;
     width: 40vw;
     padding: 2%;
-    box-shadow: 0 5px 8px 0 rgba(0,0,0,0.5);
+    box-shadow: 0 5px 8px 0 rgba(0, 0, 0, 0.5);
     border-radius: 30px;
 }
 
@@ -33,9 +33,8 @@
     display: flex;
     justify-content: space-between;
 }
+
 .moda-footer button {
     width: auto;
     height: 7vh;
 }
-
-
